--- a/app/templates/ingredients/form.hbs
+++ b/app/templates/ingredients/form.hbs
@@ -3,7 +3,8 @@
 <div class="row">
     <div class="col-md-6">
 
-      {{category-item-form item=model buttonLabel=buttonLabel action='saveCategory'}}
+      {{ingredient-item-form item=model buttonLabel=buttonLabel action='saveIngredient'}}
 
     </div>
+
 </div>
