add relation Recepy-ingredient

--- a/app/templates/recepies/form.hbs
+++ b/app/templates/recepies/form.hbs
@@ -6,6 +6,7 @@
       {{recepy-item-form
         recepy=newRecepy
         categories=categories
+        ingredients=ingredients
         buttonLabel=buttonLabel
         action='saveRecepy'}}
 
