--- a/app/templates/recepies/form.hbs
+++ b/app/templates/recepies/form.hbs
@@ -5,6 +5,7 @@
 
       {{recepy-item-form
         recepy=newRecepy
+        ingredientAmount=ingredientAmount
         categories=categories
         ingredients=ingredients
         buttonLabel=buttonLabel
